dnl Process this file with autoconf to create configure.
set
# require autoconf 2.53
AC_PREREQ(2.53)

AC_INIT([xmlroff XSL Formatter testsuite],
	[0.4.0],
	[http://sourceforge.net/tracker/?group_id=73148],
	xmlroff-testsuite)
AC_CONFIG_SRCDIR([configure.ac])
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
