dnl Process this file with autoconf to create configure.
set
# require autoconf 2.53
AC_PREREQ(2.53)

AC_INIT([xmlroff XSL Formatter testsuite],
	[0.5.4],
	[http://xmlroff.org/newticket?component=testsuite],
	xmlroff-testsuite)
AC_CONFIG_SRCDIR([configure.ac])
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
